@@ -1,3 +1,7 @@
+2006-08-21  Werner Koch  <wk@g10code.com>
+
+	* gcrypt.h (GCRYCTL_FAKED_RANDOM_P): New.
+
 2006-07-29  Marcus Brinkmann  <marcus@g10code.de>
 
 	* secmem.c (init_pool): Close FD after establishing the mapping.
